--- a/libs/libjson/CMakeLists.txt
+++ b/libs/libjson/CMakeLists.txt
@@ -12,4 +12,11 @@ target_sources(json
 )
 ]]
 
-add_subdirectory(test)
+add_executable(json_t)
+target_link_libraries(json_t PRIVATE compiler_settings json test_base vodka)
+target_sources(json_t
+  PRIVATE
+    test/src/main.cpp
+)
+
+add_test(NAME test_json COMMAND json_t)
