--- a/libs/libparm/CMakeLists.txt
+++ b/libs/libparm/CMakeLists.txt
@@ -7,6 +7,21 @@ target_include_directories(parm INTERFACE include)
 target_sources(parm
   INTERFACE
     include/parm/Application.hpp
-    include/parm/Parameter.hpp)
+    include/parm/Parameter.hpp
+)
 
-#add_subdirectory(test)
+#[[
+add_executable(libparm_t)
+target_link_libraries(libparm_t
+  PRIVATE
+    compiler_settings
+    parm
+    test_base
+)
+target_sources(libparm_t
+  PRIVATE
+    src/test_help.cpp
+)
+
+add_test(NAME test_libparm COMMAND libparm_t)
+]]
