Eliminate commented cmake code

--- a/libs/libparm/CMakeLists.txt
+++ b/libs/libparm/CMakeLists.txt
@@ -10,18 +10,4 @@ target_sources(parm
     include/parm/Parameter.hpp
 )
 
-#[[
-add_executable(libparm_t)
-target_link_libraries(libparm_t
-  PRIVATE
-    compiler_settings
-    parm
-    test_base
-)
-target_sources(libparm_t
-  PRIVATE
-    src/test_help.cpp
-)
-
-add_test(NAME test_libparm COMMAND libparm_t)
-]]
+# TODO(tybl): Create unit tests
