--- a/libs/libjson/CMakeLists.txt
+++ b/libs/libjson/CMakeLists.txt
@@ -16,7 +16,7 @@ add_executable(json_t)
 target_link_libraries(json_t PRIVATE compiler_settings json test_base vodka)
 target_sources(json_t
   PRIVATE
-    test/src/main.cpp
+    test/json/main.cpp
 )
 
 add_test(NAME test_json COMMAND json_t)
