--- a/libs/libnmea/CMakeLists.txt
+++ b/libs/libnmea/CMakeLists.txt
@@ -35,8 +35,8 @@ add_executable(libnmea_t)
 target_link_libraries(libnmea_t PRIVATE compiler_settings nmea test_base)
 target_sources(libnmea_t
   PRIVATE
-    test/src/GGA_sentence.cpp
-    #test/src/GSA_sentence.cpp
+    test/nmea/GGA_sentence.cpp
+    #test/nmea/GSA_sentence.cpp
 )
 
 add_test(NAME test_libnmea COMMAND libnmea_t)
