Try using the logger

--- a/libs/CMakeLists.txt
+++ b/libs/CMakeLists.txt
@@ -4,6 +4,7 @@
 
 add_subdirectory(libcoord)
 add_subdirectory(libjson)
+add_subdirectory(liblog)
 add_subdirectory(liblynel)
 add_subdirectory(libmath)
 add_subdirectory(libnmea)
