Add fmtlib and consolidate 3rdparty declarations
Doctest used to be the only third party library and it made sense
to have it imported from the utils/doctest folder. However, now that I
plan on importing a couple more 3rd party libraries, I should
consolidate them into a single location.

Relevant link:
- Issue 31: Use fmtlib for string formatting
(https://github.com/tybl/tybl/issues/31)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,8 +9,8 @@ project(tybl
 	LANGUAGES CXX)
 
 include(CTest)
-include(FetchContent)
 include(utils/cmake/CompilerSettings.cmake)
+include(utils/cmake/external_libraries.cmake)
 include(utils/cmake/Linters.cmake)
 
 add_subdirectory(utils/doctest)
