Implement dynarray special member functions
Relevant links:
- Issue 32: Implement special member functions for dynarray
(https://github.com/tybl/tybl/issues/32)
- [Move assignment operator and if
this](https://stackoverflow.com/questions/9322174/move-assignment-operator-and-if-this-rhs/9322542#9322542)

--- a/libs/libvodka/CMakeLists.txt
+++ b/libs/libvodka/CMakeLists.txt
@@ -7,6 +7,7 @@ target_include_directories(vodka INTERFACE include)
 target_sources(vodka
   INTERFACE
     include/vodka/basic_fixed_string.hpp
+    include/vodka/dynarray.hpp
     include/vodka/parse_error.hpp
 )
 
