--- a/libs/libstats/CMakeLists.txt
+++ b/libs/libstats/CMakeLists.txt
@@ -11,17 +11,17 @@ if(Eigen3_FOUND)
   target_link_libraries(stats INTERFACE Eigen3::Eigen)
   target_sources(stats INTERFACE include/stats/distribution.hpp)
 
-  add_executable(libstats_t)
-  target_link_libraries(libstats_t
+  add_executable(test_libstats)
+  target_link_libraries(test_libstats
     PRIVATE
       doctest::doctest
       stats
   )
-  target_sources(libstats_t
+  target_sources(test_libstats
     PRIVATE
       test/stats/main.cpp
   )
-  add_test(NAME test_libstats COMMAND libstats_t)
+  add_test(NAME libstats_test COMMAND test_libstats)
 
 else()
   message("Note: Not building \"libstats\"; install Eigen3 to enable")
