Move parse_char to separate library

--- a/libs/CMakeLists.txt
+++ b/libs/CMakeLists.txt
@@ -9,5 +9,6 @@ add_subdirectory(liblynel)
 add_subdirectory(libmath)
 add_subdirectory(libnmea)
 add_subdirectory(libparm)
+add_subdirectory(libparse)
 add_subdirectory(libstats)
 add_subdirectory(libvodka)
