--- a/libs/libnmea/CMakeLists.txt
+++ b/libs/libnmea/CMakeLists.txt
@@ -4,7 +4,7 @@
 
 add_library(nmea)
 target_include_directories(nmea PUBLIC include)
-target_link_libraries(nmea PUBLIC compiler_settings vodka)
+target_link_libraries(nmea PUBLIC compiler_settings fmt log vodka)
 target_sources(nmea
   PRIVATE
     src/gps/almanac.cpp
@@ -30,11 +30,11 @@ target_sources(nmea
 )
 
 add_executable(test_libnmea)
-target_link_libraries(test_libnmea PRIVATE compiler_settings nmea test_base)
+target_link_libraries(test_libnmea PRIVATE compiler_settings fmt nmea test_base)
 target_sources(test_libnmea
   PRIVATE
     test/nmea/GGA_sentence.cpp
-    #test/nmea/GSA_sentence.cpp
+    test/nmea/simple_test.cpp
 )
 
 add_test(NAME libnmea_test COMMAND test_libnmea)
