--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -25,8 +25,8 @@ jobs:
       # See https://cmake.org/cmake/help/latest/variable/CMAKE_BUILD_TYPE.html?highlight=cmake_build_type
       run: cmake -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}}
       env:
-        CC:  gcc-10
-        CXX: g++-10
+        CC:  clang-12
+        CXX: clang++-12
 
     - name: Build
       # Build your program with the given configuration
