--- a/libs/libmath/CMakeLists.txt
+++ b/libs/libmath/CMakeLists.txt
@@ -7,6 +7,7 @@ target_include_directories(math INTERFACE include)
 target_link_libraries(math INTERFACE compiler_settings)
 target_sources(math
   INTERFACE
+    include/math/scaled_numeric.hpp
     include/math/stats/distribution.hpp
     include/math/stats/probability.hpp
     include/math/pow10.hpp
