--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -20,10 +20,19 @@ jobs:
     steps:
     - uses: actions/checkout@v2
 
+    - name: Configure Dependencies
+      # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
+      # See https://cmake.org/cmake/help/latest/variable/CMAKE_BUILD_TYPE.html?highlight=cmake_build_type
+      run: cmake -S ${{github.workspace}}/deps -B ${{github.workspace}}/deps/build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}} -DCMAKE_INSTALL_PATH=${{github.workspace}}/deps
+
+    - name: Build Dependencies
+      # Build your program with the given configuration
+      run: cmake --build ${{github.workspace}}/deps/build --config ${{env.BUILD_TYPE}}
+
     - name: Configure CMake
       # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
       # See https://cmake.org/cmake/help/latest/variable/CMAKE_BUILD_TYPE.html?highlight=cmake_build_type
-      run: cmake -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}}
+      run: cmake -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}} -DCMAKE_PREFIX_PATH=${{github.workspace}}/deps
 
     - name: Build
       # Build your program with the given configuration
